Cleaned up unused imports in both .py and notebook

--- a/rps.ipynb
+++ b/rps.ipynb
@@ -10,22 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b957431c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Loading the libraries\n",
+    "# load necessary libraries\n",
     "import tensorflow as tf\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
     "import matplotlib.pyplot as plt \n",
     "from PIL import Image\n",
-    "import random, glob\n",
-    "from PIL import Image\n",
-    "from pathlib import Path\n",
     "import random\n",
+    "from pathlib import Path\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, classification_report, confusion_matrix\n",
     "import seaborn as sns\n",
