Fixed inconsistent Model 3 comment

--- a/rps.ipynb
+++ b/rps.ipynb
@@ -3555,7 +3555,6 @@
    "source": [
     "# Analysis summary ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
     "# OBSERVATIONS:\n",
-    "# All three models achieved good fit without significant overfitting or underfitting.\n",
     "\n",
     "# Model 1 and model 2: Training accuracy lower than validation accuracy (negative gap)\n",
     "# - This counterintuitive result is caused by data augmentation making training harder\n",
@@ -3563,11 +3562,11 @@
     "# - Negative gap is desirable, because it confirms that models generalize well without memorizing training data\n",
     "# - Dropout in Model 2 further increased the negative gap while improving generalization\n",
     "\n",
-    "# Model 3: Training and validation accuracy nearly equal\n",
-    "# - BatchNormalization and GlobalAveragePooling enabled high training accuracy without overfitting\n",
-    "# - Lower dropout rate (0.3 vs 0.5) allowed closer fit to training data\n",
-    "# - Training curves showed initial instability requiring extended warmup period\n",
-    "# - After stabilization, achieved excellent performance without overfitting\n",
+    "# Model 3: Training accuracy higher than validation accuracy (positive gap)\n",
+    "# - BatchNormalization warmup instability caused erratic validation accuracy during early epochs\n",
+    "# - Lower dropout rate (0.3 vs 0.5) allowed closer fit to training data, contributing to the gap\n",
+    "# - Early stopping restored the best weights, but some overfitting was still detected\n",
+    "# - Despite the gap, Model 3 still achieved the highest test accuracy among all models\n",
     "\n",
     "# REGULARIZATION STRATEGIES EMPLOYED:\n",
     "\n",
@@ -3591,7 +3590,7 @@
     "# as intended. All models learned robust features that generalize well to unseen data.\n",
     "# Model 2 (Tuned) was retrained on combined train + validation data, therefore no train-validation gap\n",
     "# analysis applies. Its strong test set performance confirms that the regularization strategies carried\n",
-    "# over effectively from the original training pipeline.\n",
+    "# over effectively from the original training pipeline. \n",
     "\n",
     "# Among all models, Model 3 (Advanced) achieved the highest test accuracy (0.9878), followed closely\n",
     "# by Model 2 (Tuned) at 0.9818. Notably, Model 2 (Tuned) outperformed Model 2 (untuned, 0.9787),\n",
